2010-07-16  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/syshacks.m4: Mac OS X 10.6 (Snow Leopard) supported
	* config/amanda/tape.m4: fix bugs causing tape support to always be
	  built (symbols aren't defined in Snow Leopard)
	* device-src/device.c: fix bug
	* perl/Amanda/Device.swg: return undef for undefined properties,
	  rather than crashing
	* installcheck/Amanda_Changer_single.pl installcheck/amdevcheck.pl: do
	  not assume tape device is defined

2010-07-16  Dustin J. Mitchell <dustin@zmanda.com>
	* config/macro-archive/ac_prog_swig.m4: fix swig version detection
	  - swig-2.0.0 works fine

2010-07-16  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Tapelist.swg: better fix for temp filename

2010-07-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Correcly compute 'Filesystem taped' for
				       incremental.
	* installcheck/amreport.pl: Test it.

2010-07-15  Satya Ganga  <gast@zmanda.com>
	* config/amanda/progs.m4: Use correct search path for mt binary.

2010-07-14  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Tapelist.swg: append a slash to dirname() and make error
	  messages better

2010-07-14  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/shmem.m4: remove unnecessary config
	  checks

2010-07-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report.pm: parse the planner's skipping a dump
	* perl/Amanda/Report/human.pm: present it correctly
	* installcheck/amreport.pl: adjust tests accordingly

2010-07-12  Nandan Athawale <nandan.athawale@gmail.com>
	* perl/Amanda/Taper/Scribe.pm: enable debugging whenever debug_taper
	  is set

2010-07-12  Orion Poplawski <orion@cora.nwra.com>
	* server-src/amoverview.pl: fix variable references in evals

2010-07-12  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am installcheck/amoverview.pl: basic installcheck
	  for amoverview

2010-07-12  Orion Poplawski <orion@cora.nwra.com>